# redteam-ai-benchmark

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.ru.md  analyze_semantic.py  answers_all.txt  config.example.yaml  pyproject.toml  run_benchmark.py
benchmark/: __init__.py  io.py  leaderboard.py  metrics.py  offline_judge.py  orchestrator.py  runner.py  types.py
configs/: nov_2025_ollama.yaml  nov_2025_ollama_models.txt
datasets/v2/: benchmark.jsonl
docs/: agent-reference.md
models/: __init__.py  base.py  lmstudio.py  ollama.py  openrouter.py  openwebui.py
optimization/: __init__.py  prompts.py
scoring/: __init__.py  base.py  constants.py  factory.py  keyword_scorer.py  model_loader.py  refusal.py  rubric_scorer.py  semantic_scorer.py  technical_scorer.py
tests/: test_judge_existing_results.py  test_leaderboard.py  test_repository_contracts.py  test_runtime_performance.py  test_semantic_scoring.py  test_v2_rubric.py
tests/fixtures/: refusal_calibration.jsonl
tests/fixtures/calibration/: rubric_responses.json
tools/: run_nov_2025_ollama_models.sh
tracing/: __init__.py  langfuse.py
utils/: __init__.py  config.py  export.py
