[project]
name = "redteam-ai-benchmark"
version = "1.0.0"
description = "Evaluate uncensored LLMs for offensive security tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pick>=2.4.0",
    "pytest>=9.0.1",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "tabulate>=0.9.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
redteam-benchmark = "run_benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
# Enable basic checks
lint.select = ["E", "F", "I", "B"]
lint.ignore = ["E501"]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    "__pycache__",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
